# ruffit

./: .gitignore  README.md  pyproject.toml
.github/workflows/: code_quality.yml  tests.yml
ruffit/: __init__.py  run.py  utils.py  watcher.py
tests/: test_run.py
