[project]

name = "ruffit"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Your Name", email = "your@email.com" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "rich>=14.1.0",
    "ruff>=0.12.9",
    "ty>=0.0.1a18",
    "watchdog>=6.0.0",
]

[project.scripts]
ruffit = "ruffit.run:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
